--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -1,91 +1,87 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Advent Pro', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Advent Pro", sans-serif;
 }
 
 .container {
-    display: flex;
- 
+  display: flex;
 }
 
-
 .menuContainer {
-    height: 100vh;
-    width: 16.25rem;
+  height: 100vh;
+  width: 16.25rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  button {
+    height: 3.125rem;
+    width: 13.125rem;
+    border: none;
+    background: #2eafb2;
+    color: white;
+    margin-bottom: 0.75rem;
+    border-radius: 0.25rem;
+    margin-left: 2rem;
+    font-weight: 600;
+    cursor: pointer;
+
     display: flex;
+    justify-content: flex-start;
     align-items: center;
-    flex-direction: column;
+    padding: 1rem;
+  }
 
-    button {
-        height: 3.125rem;
-        width: 13.125rem;
-        border: none;
-        background: #2EAFB2;
-        color: white;
-        margin-bottom: 0.75rem;
-        border-radius: 0.25rem;
-        margin-left: 2rem;
-        font-weight: 600;
-        cursor: pointer;
-    
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        padding: 1rem;
-        
-    }
-
-    button:hover {
-        background: #F3F3F3;
-        color: black;
-        transition: 0.5s;
-    }
+  button:hover {
+    background: #f3f3f3;
+    color: black;
+    transition: 0.5s;
+  }
 }
 
 .image {
-    margin-top: 3.125rem;
-    margin-bottom: 3.125rem;
+  margin-top: 3.125rem;
+  margin-bottom: 3.125rem;
 }
 
 .image2 {
-    padding-right: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .content {
-    background: #F3F3F3;
-    width: 100%;
+  background: #f3f3f3;
+  width: 100%;
 }
 
 .imageContainer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin-left: 3.75rem;
-   
-    div {
-        background: white;
-        border-radius: 0.375rem;
-        margin-right: 1.5rem;
-        margin-bottom: 1.5rem;
-        padding: 1rem;
-    
-    }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-left: 3.75rem;
 
-    h2 {
-        font-weight: 700;
-        font-size: 0.875rem;
-        line-height: 1.625rem;
-        padding-top: 0.5rem;
-    }
+  div {
+    background: white;
+    border-radius: 0.375rem;
+    margin-right: 1.5rem;
+    margin-bottom: 1.5rem;
+    padding: 1rem;
+  }
 
-    p {
-        font-weight: 400;
-        font-size: 0.75rem;
-        line-height: 1.375rem;
-    }
+  h2 {
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 1.625rem;
+    padding-top: 0.5rem;
+  }
 
-    span{
-        font-weight: 600 bold;
-        color: #8F8F8F;
-    }
+  p {
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 1.375rem;
+  }
+
+  span {
+    font-weight: 600 bold;
+    color: #8f8f8f;
+  }
 }
