--- a/src/components/login/styles.module.scss
+++ b/src/components/login/styles.module.scss
@@ -1,102 +1,163 @@
-*{
-    margin: 0;
-    padding: 0;
-    
+* {
+  margin: 0;
+  padding: 0;
 }
 
 .background {
-    background-color: #ff6c22;
+  background-color: #ff6c22;
+  height: 100vh;
 }
 
 .loginContainer {
-    width: 53.5rem;
-    height: 31.7rem;
+  width: 53rem;
+  height: 31rem;
+  border-radius: 0.25rem;
+  background-color: white;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  background-image: url("/images/background.svg");
+  background-size: 45%;
+  background-repeat: no-repeat;
+  background-position: right;
+
+  @media screen and (max-width: 848px) {
+    width: 50%;
+    height: 75%;
     border-radius: 0.25rem;
+    background-image: none;
 
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
 
- 
-
+  @media screen and (max-width: 750px) {
+    width: 75% !important;
+    height: 75% !important;
+  }
 }
 
 .firstContent {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
 
-    margin-left: 3.625rem;
+  margin-left: 3.625rem;
+
+  img {
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+  }
+
+  input {
+    width: 19.5rem;
+    height: 2.75rem;
+    font-weight: 400;
+    font-size: 0.75;
+    border-radius: 0.25rem;
+    border: solid 1px rgba(0, 0, 0, 0.2);
+    padding-left: 0.75rem;
+    margin-bottom: 0.75rem;
+  }
+
+  h2 {
+    font-weight: 700;
+    line-height: 3.375rem;
+    color: #8f8f8f;
+    margin-bottom: 1.25rem;
+    margin-top: 5rem;
+  }
+
+  span {
+    font-weight: 700;
+    color: #ff6c22;
+  }
+
+  button {
+    font-weight: 700;
+    font-size: 0.875rem;
+    width: 9.375rem;
+    height: 2.5rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    font-family: "Roboto", sans-serif;
+
+    color: white;
+    background: #2eafb2;
+    border: none;
+  }
+
+  button:hover {
+    opacity: 0.85;
+    transition: 0.5s;
+  }
+
+  @media screen and (max-width: 848px) {
+    margin: auto;
 
     img {
-        position: absolute;
-        top: 20%;
-        left: 25%;
-        transform: translate(-50%, -50%);
+      position: absolute;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
 
-    input {
-        width: 19.5rem;
-        height: 2.75rem;
-        font-weight: 400;
-        font-size: 0.75;
-        border-radius: 0.25rem;
-        border: solid 1px rgba(0, 0, 0, 0.2);
-        padding-left: 0.75rem;
-        margin-bottom: 0.75rem;
+    @media screen and (max-width: 750px) {
+      img {
+        height: 75%;
+        width: 75%;
+      }
+
+      input {
+        width: 14rem;
+        height: 2.25rem;
+      }
+
+      button {
+        width: 7.5rem;
+        height: 1.85rem;
+      }
     }
 
-    h2 {
-        font-weight: 700;
-        line-height: 3.375rem;
-        color: #8F8F8F;
-        margin-bottom: 1.25rem;
-        margin-top: 5rem;
+    @media screen and (max-width: 320px) {
+      input {
+        width: 13rem;
+        height: 1.85rem;
+      }
     }
+  }
 
-    span {
-        font-weight: 700;
-        color: #ff6c22;
-    
-    }
-
-    button {
-        font-weight: 700;
-        font-size: 0.875rem;
-        width: 9.375rem;
-        height: 2.5rem;
-        border-radius: 0.25rem;
-        cursor: pointer;
-        font-family: 'Roboto', sans-serif;
-    
-        color: white;
-        background: #2EAFB2;
-        border: none;
-    }
-
-    button:hover {
-        opacity: 0.85;
-        transition: 0.5s;
-    }
-}
-
-.secondContent {
+  .secondContent {
     margin-right: 3rem;
     height: 100%;
 
     display: flex;
-    align-items: flex-end;  
-}
+    align-items: flex-end;
 
-.email::placeholder {
-    opacity: 0.5;
-}
+    @media screen and (max-width: 848px) {
+      display: none;
+    }
+  }
 
-.password::placeholder  {
+  .email::placeholder {
     opacity: 0.5;
+  }
+
+  .password::placeholder {
+    opacity: 0.5;
+  }
 }
