--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -4,8 +4,11 @@
   font-family: "Advent Pro", sans-serif;
 }
 
+
+
 .container {
   display: flex;
+  margin: 0 auto;
 }
 
 .menuContainer {
@@ -14,6 +17,11 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: white;
+
+  @media screen and (max-width:426px) {
+    display: none;
+  }
 
   button {
     height: 3.125rem;
@@ -38,6 +46,8 @@
     color: black;
     transition: 0.5s;
   }
+
+
 }
 
 .image {
@@ -49,39 +59,97 @@
   padding-right: 0.75rem;
 }
 
-.content {
-  background: #f3f3f3;
-  width: 100%;
+.bannerContainer {
+  background-color: #f3f3f3;
 }
 
-.imageContainer {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-left: 3.75rem;
-
-  div {
-    background: white;
-    border-radius: 0.375rem;
-    margin-right: 1.5rem;
-    margin-bottom: 1.5rem;
-    padding: 1rem;
-  }
-
-  h2 {
-    font-weight: 700;
-    font-size: 0.875rem;
-    line-height: 1.625rem;
-    padding-top: 0.5rem;
-  }
-
-  p {
-    font-weight: 400;
-    font-size: 0.75rem;
-    line-height: 1.375rem;
-  }
+.welcomeMessage {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 4rem 0rem 0rem 3rem;
+  padding-bottom: 1.5rem;
+  font-size: 1.5em;
+  color: rgba(0, 0, 0, 0.4);
 
   span {
-    font-weight: 600 bold;
-    color: #8f8f8f;
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+.sectionBanner {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding-top: 2rem;
+
+  @media screen and (max-width:1024px) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 2rem;
+  }
+
+  @media screen and (max-width:768px) {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding-top: 2rem;
+    }
+
+  .banner {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 1rem 0rem 0rem 3rem;
+    background-color: white;
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.09);
+    border-radius: 0.375rem;
+   
+    padding: 0.7rem;
+    cursor: pointer;
+
+    .imagesBanner {
+      width: 100%;
+      position: relative;
+      overflow: hidden;
+
+      img {
+        max-width: 100%;
+        min-width: 9.5rem;
+      }
+
+      .days {
+        width: 100%;
+        max-width: 4.75rem;
+        top: 10%;
+        right: 5%;
+        color: white;
+        font-size: 0.75rem;
+        position: absolute;
+        background-color: rgba(0, 0, 0, 0.4);
+        border-radius: 0.25rem;
+        padding: 0.5rem;
+        text-align: center;
+
+        .timeAgo {
+          display: flex;
+          justify-content: space-around;
+          align-items: center;
+        }
+
+        .calendarImage {
+          height: 1rem;
+        }
+      }
+    }
+
+    .description {
+      width: 100%;
+      margin: 1em auto;
+
+      h3 {
+        font-size: 0.875rem;
+      }
+
+      p {
+        font-size: 0.75rem;
+      }
+    }
   }
 }
