--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -4,22 +4,28 @@
   font-family: "Advent Pro", sans-serif;
 }
 
-
-
 .container {
   display: flex;
   margin: 0 auto;
 }
 
+.menuToggle {
+  display: none;
+}
+
 .menuContainer {
   height: 100vh;
-  width: 16.25rem;
+  width: 35rem;
   display: flex;
   align-items: center;
   flex-direction: column;
   background-color: white;
 
-  @media screen and (max-width:426px) {
+  li {
+    list-style: none;
+  }
+
+  @media screen and (max-width: 426px) {
     display: none;
   }
 
@@ -45,9 +51,17 @@
     background: #f3f3f3;
     color: black;
     transition: 0.5s;
+    width: 100%;
+
+    img:first-child {
+      filter: brightness(0.6) invert(0.9) sepia(1) saturate(2)
+        hue-rotate(300deg);
+    }
+    img {
+      filter: brightness(0.6) invert(0.9) sepia(1) saturate(2)
+        hue-rotate(300deg);
+    }
   }
-
-
 }
 
 .image {
@@ -57,6 +71,7 @@
 
 .image2 {
   padding-right: 0.75rem;
+  filter: brightness(3) invert(0) sepia(1) saturate(0) hue-rotate(0deg);
 }
 
 .bannerContainer {
@@ -65,7 +80,7 @@
 
 .welcomeMessage {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  margin: 4rem 0rem 0rem 3rem;
+  margin: 4rem 3rem 0rem 3rem;
   padding-bottom: 1.5rem;
   font-size: 1.5em;
   color: rgba(0, 0, 0, 0.4);
@@ -79,28 +94,31 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding-top: 2rem;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  gap: 1rem;
 
-  @media screen and (max-width:1024px) {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  padding-top: 2rem;
+  @media screen and (max-width: 1024px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 2rem;
   }
 
-  @media screen and (max-width:768px) {
+  @media screen and (max-width: 768px) {
     display: grid;
     grid-template-columns: 1fr;
     padding-top: 2rem;
-    }
+  }
 
   .banner {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-    margin: 1rem 0rem 0rem 3rem;
+
     background-color: white;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.09);
     border-radius: 0.375rem;
-   
+
     padding: 0.7rem;
     cursor: pointer;
 
