--- a/src/components/login/styles.module.scss
+++ b/src/components/login/styles.module.scss
@@ -74,6 +74,18 @@
     margin-bottom: 0.75rem;
   }
 
+  .password::placeholder {
+    background-image: url("/images/password.svg");
+    background-repeat: no-repeat;
+    background-position: right;
+    margin-right: 0.625rem;
+    opacity: 0.5;
+  }
+
+  .email::placeholder {
+    opacity: 0.5;
+  }
+
   h2 {
     font-weight: 700;
     line-height: 3.375rem;
@@ -140,24 +152,16 @@
       }
     }
   }
+}
 
-  .secondContent {
-    margin-right: 3rem;
-    height: 100%;
+.secondContent {
+  margin-right: 3rem;
+  height: 100%;
 
-    display: flex;
-    align-items: flex-end;
+  display: flex;
+  align-items: flex-end;
 
-    @media screen and (max-width: 848px) {
-      display: none;
-    }
-  }
-
-  .email::placeholder {
-    opacity: 0.5;
-  }
-
-  .password::placeholder {
-    opacity: 0.5;
+  @media screen and (max-width: 848px) {
+    display: none;
   }
 }
