--- a/src/components/content/styles.module.scss
+++ b/src/components/content/styles.module.scss
@@ -1,9 +1,3 @@
-
-
-.bannerContainer {
-  background-color: #f3f3f3;
-}
-
 .welcomeMessage {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   margin: 4rem 3rem 0rem 3rem;
@@ -22,7 +16,7 @@
   padding-top: 2rem;
   margin-left: 3rem;
   margin-right: 3rem;
-  gap: 1rem;
+  gap: 1.375rem;
 
   @media screen and (max-width: 1024px) {
     display: grid;
@@ -46,6 +40,7 @@
     border-radius: 0.375rem;
 
     padding: 0.7rem;
+    padding-bottom: 0;
     cursor: pointer;
 
     .imagesBanner {
@@ -65,34 +60,40 @@
         right: 5%;
         color: white;
         font-size: 0.75rem;
+        line-height: 1rem;
         position: absolute;
         background-color: rgba(0, 0, 0, 0.4);
         border-radius: 0.25rem;
-        padding: 0.5rem;
-        text-align: center;
+        padding: 0.4rem;
 
         .timeAgo {
           display: flex;
           justify-content: space-around;
           align-items: center;
-        }
+          background: url("/images/calendar.svg");
+          background-repeat: no-repeat;
+          background-position: left;
 
-        .calendarImage {
-          height: 1rem;
+          p{
+            padding-left: 1.5rem;
+          }
         }
       }
     }
 
     .description {
       width: 100%;
-      margin: 1em auto;
+      margin: 0.5rem auto;
 
       h3 {
         font-size: 0.875rem;
+        line-height: 1.625rem;
       }
 
       p {
+        padding-top: 1;
         font-size: 0.75rem;
+        line-height: 1.375rem;
       }
     }
   }
