--- a/src/components/burguerMenu/styles.module.scss
+++ b/src/components/burguerMenu/styles.module.scss
@@ -1,73 +1,62 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Advent Pro", sans-serif;
+.menu {
+  background: transparent;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 3rem;
+  right: 3rem;
+
+  @media screen and (min-width:601px) {
+    display: none;
+  }
 }
 
-.container {
-  display: flex;
-  margin: 0 auto;
+.hamburguer {
+  position: relative;
+  display: block;
+  background: #000;
+  opacity: 0.5;
+  width: 30px;
+  height: 1px;
+  top: 29px;
+  left: 15px;
+  transition: 0.5s ease-in-out;
 }
 
-.menuToggle {
+.hamburguer:before,
+.hamburguer:after {
+  background: #000;
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transition: 0.5s ease-in-out;
+}
+
+.hamburguer:before {
+  top: -10px;
+}
+
+.hamburguer:after {
+  bottom: -10px;
+}
+
+.inputBurguer {
   display: none;
-
-
-  .toggleContainer {
-    height: 100vh;
-    width: 100vh;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    background-color: white;
-
-    li {
-      list-style: none;
-    }
-
-
-    button {
-      height: 3.125rem;
-      width: 13.125rem;
-      border: none;
-      background: #2eafb2;
-      color: white;
-      margin-bottom: 0.75rem;
-      border-radius: 0.25rem;
-      margin-left: 2rem;
-      font-weight: 600;
-      cursor: pointer;
-
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 1rem;
-    }
-
-    button:hover {
-      background: #f3f3f3;
-      color: black;
-      transition: 0.5s;
-      width: 100%;
-
-      img:first-child {
-        filter: brightness(0.6) invert(0.9) sepia(1) saturate(2)
-          hue-rotate(300deg);
-      }
-      img {
-        filter: brightness(0.6) invert(0.9) sepia(1) saturate(2)
-          hue-rotate(300deg);
-      }
-    }
-  }
-
-  .image {
-    margin-top: 3.125rem;
-    margin-bottom: 3.125rem;
-  }
-
-  .image2 {
-    padding-right: 0.75rem;
-    filter: brightness(3) invert(0) sepia(1) saturate(0) hue-rotate(0deg);
-  }
 }
+
+.inputBurguer:checked ~ label .hamburguer {
+  transform: rotate(45deg);
+}
+.inputBurguer:checked ~ label .hamburguer:before {
+  transform: rotate(90deg);
+  top: 0;
+}
+
+.inputBurguer:checked ~ label .hamburguer:after {
+  transform: rotate(90deg);
+  bottom: 0;
+}
+
