--- a/src/components/burguerMenu/styles.module.scss
+++ b/src/components/burguerMenu/styles.module.scss
@@ -7,7 +7,7 @@
   top: 3rem;
   right: 3rem;
 
-  @media screen and (min-width:601px) {
+  @media screen and (min-width: 601px) {
     display: none;
   }
 }
@@ -27,7 +27,7 @@
 .hamburguer:before,
 .hamburguer:after {
   background: #000;
-  content: '';
+  content: "";
   display: block;
   width: 100%;
   height: 100%;
@@ -59,4 +59,3 @@
   transform: rotate(90deg);
   bottom: 0;
 }
-
