--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,30 +1,38 @@
-.menuContainer {
+.welcomeMessage {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 4rem 3rem 0rem 3rem;
+  padding-bottom: 1.5rem;
+  font-size: 1.5em;
+  color: rgba(0, 0, 0, 0.4);
+
+  span {
+    color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+.menuBurguer {
   height: 100vh;
-  width: 35rem;
+  width: 100%;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   flex-direction: column;
-  background-color: white;
+  background-color: transparent;
 
-  @media screen and (max-width: 1024px) {
-    height: 120vh;
+  @media screen and (min-width: 601px) {
+    display: none;
   }
-  @media screen and (max-width: 848px) {
-    height: 130vh;
-  }
-  @media screen and (max-width: 768px) {
-    height: 230vh;
+
+  .imagetoggle {
+    display: block;
+    padding: 2rem 0;
   }
 
   li {
     list-style: none;
   }
 
-  @media screen and (max-width: 600px) {
-    display: none;
-  }
-
-  button {
+  .buttonToggle {
     height: 3.125rem;
     width: 13.125rem;
     border: none;
@@ -32,7 +40,6 @@
     color: white;
     margin-bottom: 0.75rem;
     border-radius: 0.25rem;
-    margin-left: 2rem;
     font-weight: 600;
     cursor: pointer;
 
@@ -42,8 +49,8 @@
     padding: 1rem;
   }
 
-  button:hover {
-    background: #f3f3f3;
+  .buttonToggle:hover {
+    background: #d3d3d3;
     color: black;
     transition: 0.5s;
     width: 100%;
@@ -57,14 +64,4 @@
         hue-rotate(300deg);
     }
   }
-}
-
-.image {
-  margin-top: 3.125rem;
-  margin-bottom: 3.125rem;
-}
-
-.image2 {
-  padding-right: 0.75rem;
-  filter: brightness(3) invert(0) sepia(1) saturate(0) hue-rotate(0deg);
 }
