--- a/src/components/home/styles.module.scss
+++ b/src/components/home/styles.module.scss
@@ -7,6 +7,9 @@
 .container {
   display: flex;
   margin: 0 auto;
-  background-color: #f3f3f3
-}
+  background-color: #f3f3f3;
 
+  @media screen and (max-width: 601px) {
+    flex-direction: column;
+  }
+}
